🐛 🚚 Create new folder for infoScreen; fix touchscreen

--- a/HomeScreen.kv
+++ b/HomeScreen.kv
@@ -61,6 +61,9 @@
                         on_release: root.manager.current = '3D'
 
                     Button: 
+                        text: "Camera"
+
+                    Button: 
                         text: "Other"
 
                 Button:
