💄 🐛 FIx showcase demo

--- a/HomeScreen.kv
+++ b/HomeScreen.kv
@@ -51,6 +51,7 @@
 
                     Button: 
                         text: "Kivy Catalog"
+                        on_release: root.manager.current = 'showcase'
 
                     Button: 
                         text: "Multitouch"
