--- a/showcase/data/screens/accordions.kv
+++ b/showcase/data/screens/accordions.kv
@@ -20,12 +20,13 @@ ShowcaseScreen:
     Accordion:
 
         orientation: 'horizontal' if tbh.state == 'down' else 'vertical'
+        padding: 10
 
         AccordionItem:
             title: 'Panel 1'
             Label:
                 text: 'This is a label fit to the content view'
-                text_size: self.width, None
+                text_size: (self.width - 15), None
 
         AccordionItem:
             title: 'Panel 2'
@@ -36,4 +37,4 @@ ShowcaseScreen:
             title: 'Panel 3'
             Label:
                 text: 'This is a label fit to the content view'
-                text_size: self.width, None
+                text_size: (self.width - 15), None
