--- a/showcase/data/screens/scatter.kv
+++ b/showcase/data/screens/scatter.kv
@@ -10,5 +10,5 @@ ShowcaseScreen:
 
             Image:
                 id: image
-                source: 'data/faust_github.jpg'
+                source: 'showcase/data/faust_github.jpg'
                 size: self.texture_size
