--- a/showcase/showcase.kv
+++ b/showcase/showcase.kv
@@ -2,9 +2,83 @@
 #:import KivyLexer kivy.extras.highlight.KivyLexer
 #:import Factory kivy.factory.Factory
 
+<ShowcaseFullScreen>:
+    PhytecBackground: 
+        SmallerWhiteBackground: 
+            id: template_background
+            BoxLayout:
+                orientation:"horizontal"
+                size_hint: 1,0.05
+                TextLabel: 
+                    id: title
+                    text: "[size=20sp]Informations[/size]"
+                
+                Button:
+                    text: "Home"
+                    size_hint_x: 0.1
+                    on_release: root.manager.current='home'
+
+            BoxLayout:
+                orientation: 'vertical'
+                canvas.before:
+                    Color:
+                        rgb: .6, .6, .6
+                    Rectangle:
+                        size: self.size
+                        source: 'showcase/data/background.png'
+                        pos: self.pos
+
+                ActionBar:
+                    ActionView:
+                        id: av
+                        ActionPrevious:
+                            title: 'Showcase' + ('' if not root.current_title else ' - {}'.format(root.current_title))
+                            on_release: root.go_hierarchy_previous()
+                            app_icon: ''
+                            with_previous: False
+                        ActionSpinner:
+                            id: spnr
+                            important: True #priority to display
+                            text: 'Jump to Screen'
+                            values: root.screen_names # all the names of the screen
+                            on_text:
+                                if sm.current != args[1]:\
+                                idx = root.screen_names.index(args[1]);\
+                                root.go_screen(idx)
+                        ActionToggleButton:
+                            text: 'Toggle sourcecode'
+                            icon: 'showcase/data/icons/bug.png'
+                            on_release: root.toggle_source_code()
+                        ActionButton:
+                            text: 'Previous screen'
+                            icon: 'showcase/data/icons/chevron-left.png'
+                            on_release: root.go_previous_screen()
+                        ActionButton:
+                            text: 'Next screen'
+                            icon: 'showcase/data/icons/chevron-right.png'
+                            on_release: root.go_next_screen()
+                            important: True
+                ScrollView:
+                    id: sv
+                    size_hint_y: None
+                    height: 0
+                    CodeInput:
+                        id: sourcecode
+                        lexer: KivyLexer()
+                        text: root.sourcecode
+                        readonly: True
+                        size_hint_y: None
+                        font_size: '12sp'
+                        height: self.minimum_height
+                ScreenManager:
+                    id: sm
+                    on_current_screen:
+                        spnr.text = args[1].name
+                        idx = root.screen_names.index(args[1].name)
+                        if idx > -1: root.hierarchy.append(idx)
+
 <ActionSpinnerOptions@SpinnerOption>
     background_color: .4, .4, .4, 1
-
 <ActionSpinner@Spinner+ActionItem>
     canvas.before:
         Color:
@@ -35,69 +109,4 @@
                 height: self.height if root.fullscreen else self.minimum_height
 
 
-BoxLayout:
-    orientation: 'vertical'
 
-    canvas.before:
-        Color:
-            rgb: .6, .6, .6
-        Rectangle:
-            size: self.size
-            source: 'data/background.png'
-
-    ActionBar:
-
-        ActionView:
-            id: av
-            ActionPrevious:
-                # with_previous: (False if sm.current_screen.name == 'button' else True) if sm.current_screen else False
-                title: 'Showcase' + ('' if not app.current_title else ' - {}'.format(app.current_title))
-                on_release: app.go_hierarchy_previous()
-                app_icon: ''
-                # app_icon: 'data/icons/home.png'
-                # previous_icon: ''
-                with_previous: False
-
-            ActionSpinner:
-                id: spnr
-                important: True #priority to display
-                text: 'Jump to Screen'
-                values: app.screen_names # all the names of the screen
-                on_text:
-                    if sm.current != args[1]:\
-                    idx = app.screen_names.index(args[1]);\
-                    app.go_screen(idx)
-            ActionToggleButton:
-                text: 'Toggle sourcecode'
-                icon: 'data/icons/bug.png'
-                on_release: app.toggle_source_code()
-            ActionButton:
-                text: 'Previous screen'
-                icon: 'data/icons/chevron-left.png'
-                on_release: app.go_previous_screen()
-            ActionButton:
-                text: 'Next screen'
-                icon: 'data/icons/chevron-right.png'
-                on_release: app.go_next_screen()
-                important: True
-
-    ScrollView:
-        id: sv
-        size_hint_y: None
-        height: 0
-
-        CodeInput:
-            id: sourcecode
-            lexer: KivyLexer()
-            text: app.sourcecode
-            readonly: True
-            size_hint_y: None
-            font_size: '12sp'
-            height: self.minimum_height
-
-    ScreenManager:
-        id: sm
-        on_current_screen:
-            spnr.text = args[1].name
-            idx = app.screen_names.index(args[1].name)
-            if idx > -1: app.hierarchy.append(idx)
