🐛 Fix progress Bar

--- a/touchtracer/touchtracer.kv
+++ b/touchtracer/touchtracer.kv
@@ -48,7 +48,7 @@
 
                 TextLabel: 
                     id: title
-                    text: "[size=20sp]3D Rendering[/size]"
+                    text: "[size=20sp]Multitouch[/size]"
                 
                 Button:
                     text: "Home"
