--- a/monkeyRendering/renderScreen.kv
+++ b/monkeyRendering/renderScreen.kv
@@ -1,34 +1,3 @@
-#:kivy 1.0.9
-
-<PhytecBackground@AnchorLayout>:
-    anchor_x: 'center'
-    anchor_y: 'center'
-    padding: 13
-    canvas:
-        Rectangle:
-            source: 'images/background.jpg'
-            size: self.size
-
-
-<SmallerWhiteBackground@BoxLayout>:
-    orientation: 'vertical'
-    padding: 10 
-    spacing: 10
-    canvas:
-        Color:
-            rgba: 1,1,1,0.9
-        Rectangle:
-            pos: self.pos
-            size: self.size
-
-<TextLabel@Label>:
-    color: (0,0,0,1)
-    markup: True
-    # To wrap the text with max width
-    size_hint_y: None
-    text_size: self.width, None
-    height: self.texture_size[1]
-
 <Screen3DRendering>:
     PhytecBackground: 
         SmallerWhiteBackground: 
@@ -47,11 +16,15 @@
                     size_hint_x: 0.1
                     on_release: root.manager.current='home'
 
-            Renderer:
-                id: renderer
-                canvas:
+            AnchorLayout:
+                anchor_x: 'center'
+                canvas.before:
                     Color:
-                        rgb: 1,0,0
+                        rgb: .6, .6, .6
                     Rectangle:
                         size: self.size
+                        source: 'showcase/data/background.png'
                         pos: self.pos
+
+                Renderer:
+                    id: renderer
