--- a/kivydemo/HomeScreen.kv
+++ b/kivydemo/HomeScreen.kv
@@ -93,7 +93,7 @@
 
                     RoundedButton: 
                         text: "Camera"
-                        on_release: root.manager.current = 'camera'
+                        # on_release: root.manager.current = 'camera'
 
                     RoundedButton: 
                         text: "Other"
