📝 💄 Improve readme, fix setup, add camera and improve scatter

--- a/kivydemo/HomeScreen.kv
+++ b/kivydemo/HomeScreen.kv
@@ -96,7 +96,7 @@
 
                     RoundedButton: 
                         text: "Camera"
-                        # on_release: root.manager.current = 'camera'
+                        on_release: root.manager.current = 'camera'
 
                     RoundedButton: 
                         text: "Other"
