--- a/kivydemo/showcase/data/screens/scatter.kv
+++ b/kivydemo/showcase/data/screens/scatter.kv
@@ -13,5 +13,5 @@ ShowcaseScreen:
 
             Image:
                 id: image
-                source: path.join(path_demo,'showcase/data/images/faust_github.jpg')
-                size: self.texture_size
+                source: path.join(path_demo,'showcase/data/images/image_scatter.jpg')
+                size: 400, 400
