--- a/kivydemo/showcase/data/screens/media.kv
+++ b/kivydemo/showcase/data/screens/media.kv
@@ -9,6 +9,6 @@ ShowcaseScreen:
         orientation: "vertical"
         Image:
             source: path.join(path_demo,'showcase/data/images/cityCC0.png')
-        Video:
+        VideoPlayer:
             source: path.join(path_demo,'showcase/data/images/cityCC0.mpg')
             state: "play"
