📝 💄 Add 3D phytec logo, chnage doc, fix homescreen

--- a/kivydemo/HomeScreen.kv
+++ b/kivydemo/HomeScreen.kv
@@ -66,11 +66,11 @@
             BoxLayout:
                 orientation: 'horizontal'
 
-                Button:
-                    text: "L"
-                    size_hint: (0.08,0.1)
-                    pos_hint: {'center_y':0.5}
-                    disabled: True # TODO: enable or disable depending on the page I am on 
+                # Button:
+                #     text: "L"
+                #     size_hint: (0.08,0.1)
+                #     pos_hint: {'center_y':0.5}
+                #     disabled: True # TODO: enable or disable depending on the page I am on 
             
                 GridLayout:
                     cols: 3
@@ -99,14 +99,14 @@
                         on_release: root.manager.current = 'camera' if root.manager.has_screen('camera') else print("No camera screen")
                         disabled: not app.has_no_camera()
 
-                    RoundedButton: 
-                        text: "Other"
-                        disabled: True
+                    # RoundedButton: 
+                    #     text: "Other"
+                    #     disabled: True
 
-                Button:
-                    text: "R"
-                    size_hint: (0.08,0.1)
-                    pos_hint: {'center_y':0.5}
-                    disabled: False # TODO: enable or disable depending on the page I am on 
+                # Button:
+                #     text: "R"
+                #     size_hint: (0.08,0.1)
+                #     pos_hint: {'center_y':0.5}
+                #     disabled: False # TODO: enable or disable depending on the page I am on 
 
                     
