--- a/kivydemo/showcase/data/screens/scatter.kv
+++ b/kivydemo/showcase/data/screens/scatter.kv
@@ -1,5 +1,6 @@
 #:import path os.path
 #:import path_demo kivydemo.path_demo
+#:import path_images kivydemo.path_images
 
 ShowcaseScreen:
     name: 'Scatter'
@@ -13,5 +14,5 @@ ShowcaseScreen:
 
             Image:
                 id: image
-                source: path.join(path_demo,'images/image_scatter.jpg')
+                source: path.join(path_images,'IMG_7942.JPG')
                 size: 400, 400
